#2565 closed bug (fixed)
cdda-fs fails to copy the last track off some audio CDs
Reported by: | anevilyak | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | File Systems/cdda | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
If I try to copy the last track of a CD mounted via cdda-fs to the hard disk, it copies around 99% of the file and then fails with General OS error. Perhaps some calculation error in the size of the disc? This only seems to happen with some discs though, what information can I gather for this case?
Change History (10)
comment:1 by , 17 years ago
follow-up: 5 comment:2 by , 17 years ago
Can you name some example CDs, preferably in the alternative/rock genre? :-))
comment:3 by , 17 years ago
I'll need to check...any preferred bands? The one I saw it with was a relatively obscure Japanese import CD which I doubt you'd have in your collection anyways, because it happened to be in the drive at the time and was auto-mounted so I played around (I'm not used to having CD support since I usually use the ata bus manager, but reverted that and forgot to set it back when making an image for koki).
comment:4 by , 17 years ago
Also if it helps, of the last track it was only missing around 9KB or so, that was copying with Tracker though which iirc uses variable size buffers as the copy goes on, if you want I can try it with DD and a small block size to see if it's just the very last block that fails or what.
comment:5 by , 17 years ago
Replying to axeld:
Can you name some example CDs, preferably in the alternative/rock genre? :-))
Oh come on now, this is just a ploy to find out what our musical preferences are :D
In my case, it was one of the only CDs I found sitting in a pile on the shelf: Weird Al Yankovic's Straight Outta Lynnwood (DualDisc format)
Yeah, slightly embarrassing ;)
comment:6 by , 17 years ago
Some more observations that might be relevant to both this and #2511:
1) trying cd /Audio\ CD and typing ls results in an infinite loop of "ls: cannot access : No such file or directory 2) Trying to cp the files from the CD to someplace else results in every track being 7.8KB on the destination for some reason (no errors reported). Tracker however manages to copy all but the last track correctly. In any case, the reported mimetype on the CD for the files is audio/x-wav, the same as on the hard disk. 3) If I try to copy the file via dd if=/Audio\ CD/10.wav of=/boot/home/10.wav bs=2048, I oddly wind up with a *larger* file than the CD reports (CD reports 54.0MB, the file on the hard disk winds up at 54.87). dd does fail with: dd: reading `10.wav': General system error 28093+1 records in 28093+1 records out 57536468 bytes (58MB) copied, 89.8797 s, 640 kB/s 4) When the dd or Tracker copy fails, I see: "KERN: check_sense: Illegal request" in syslog.
comment:7 by , 17 years ago
Bah, apologies for that last comment getting mangled. Unfortunately I can't reformat it :( Hope it helps in any case.
comment:8 by , 17 years ago
Sorry, I was looking at the wrong Tracker window, 54.0MB is the size that was copied by Tracker, the file on the CD is in fact reported as 54.94MB.
comment:10 by , 16 years ago
Sorry I didn't get to verify this sooner, been spending most of the weekend in gthe kernel debugger for various reasons ; confirmed fixed for everything listed here (including playing directly via mediaplayer). Thanks!
I thought it had worked in my case, but I simply missed the error message when it popped up and closed it by mistake.
So, I can confirm the issue here on hrev26767